# private

./: .env.example  .gitignore  README.md  analyze_logs.py  analyze_signal_flow.py  check_latest_entry.py  check_ontology_feature_frames.py  check_trade_approvals.py  debug_ui.html  debug_us_realtime_db.py  patch_internal_us_realtime_bridge.py  patch_us_live_market_session.py  patch_us_rest_freshness.py  pyproject.toml  run.bat  run.ps1  run.py  test_api.py  test_streaming_demo.py
.claude/: settings.json
config/: live_trading_safety.example.json  model_training.example.json  order_execution.example.json  principal_protection.example.json  realtime_market_data.example.json  research_sources.demo.json  research_sources.example.json  research_sources.live.json  risk_rules.example.json  short_horizon_strategies.yaml  theory_registry.yaml  tradable_universe.example.json  trading_costs.example.json  trading_costs.json
data/: research_universe_cursor.json
docs/: README.md  architecture.md  current_short_term_trading_audit.md  data_environment_separation.md  live_short_horizon_model_decision.md  live_trading_conversion_audit.md  live_trading_runbook.md  live_trading_safety_gates.md  live_trading_setup.md  npu_benchmark_results.md  npu_benchmark_results_npu.md  npu_optimization_audit.md  npu_realtime_benchmark_results.md  npu_realtime_benchmark_results_npu.md  npu_runtime_architecture.md  realtime_short_horizon_policy.md  semantic_feature_codebase_analysis.md  semantic_feature_engine.md  short_term_trading_strategy_design.md  system_algorithm_analysis.md  (+1 more)
src/app/: cli.py  (+12 more)
(+2157 files in other folders)
